--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <version>${google.oauth.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.auth</groupId>
+            <artifactId>google-auth-library-oauth2-http</artifactId>
+            <version>1.25.0</version>
+        </dependency>
+
+
         <!-- Google Drive API -->
         <dependency>
             <groupId>com.google.apis</groupId>
