--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
         <javafx.version>21</javafx.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <google.api.version>2.2.0</google.api.version>
+        <google.api.version>1.35.2</google.api.version>
         <google.oauth.version>1.34.1</google.oauth.version>
-        <google.drive.version>v3-rev20220815-2.0.0</google.drive.version>
+        <google.drive.version>v3-rev197-1.25.0</google.drive.version>
         <google.http.version>1.43.3</google.http.version>
     </properties>
 
@@ -59,6 +59,13 @@
             <version>1.25.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.1.0-jre</version>
+        </dependency>
+
+
 
         <!-- Google Drive API -->
         <dependency>
@@ -87,14 +94,14 @@
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-sheets</artifactId>
-            <version>v4-rev612-1.25.0</version>
+            <version>v4-rev614-1.18.0-rc</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-slides -->
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-slides</artifactId>
-            <version>v1-rev399-1.18.0-rc</version>
+            <version>v1-rev399-1.25.0</version>
         </dependency>
 
         <!-- Google HTTP Client -->
